--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue-d3": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
